Added navigation icons. Moved nav to the bottom of the page.

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
+  width: 500px;
   margin: 0 0 30px;
   background-color: #00acb0;
   overflow: hidden;
