--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -14,6 +14,12 @@ img {
   max-width: 100%;
 }
 
+.logo {
+  padding-top: 20px;
+  float: right;
+  margin:0px;
+}
+
 /* --------------------------------------------------------------------------------
 Container
 -------------------------------------------------------------------------------- */
