Changed header styling and deleted unused component.

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -15,11 +15,18 @@ img {
   display: inline-block;
   max-width: 100%;
 }
+
 h1 {
   
   font-family: 'Kalam', cursive;
   font-size: 40px;
   font-weight: bold;
+}
+
+.profile-picture {
+  float:left;
+  margin-top: 20px;
+  margin-left: 8px;
 }
 
 .logo {
@@ -29,9 +36,8 @@ h1 {
 }
 
 hr { display: block; height: 1px;
-  
   border: 0; border-top: thin solid #615246;
-  margin: 1em 0; padding: 0; }
+  margin-bottom: .5em;  }
 
 /* --------------------------------------------------------------------------------
 Container
@@ -119,7 +125,7 @@ Form Treatment
   width: 400px;
   max-width: 100%;
   padding: 25px;
-  margin: 0 auto 20px;
+  margin: 50px auto 20px;
   background-color: #efefef;
   border-radius: 3px;
   box-shadow: 0 1px 2px rgb(0, 0, 0, 0.4);
