--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,13 +2,14 @@ html,
 body,
 #react-root {
   height: 100%;
-  
+
 }
 
 body {
   font-family: 'Mali', cursive;
   margin: 0px;
- background-color: #C8BA89;
+  background-color: #C8BA89;
+  width: 100%;
 }
 
 img {
@@ -17,27 +18,59 @@ img {
 }
 
 h1 {
-  
+
   font-family: 'Kalam', cursive;
   font-size: 40px;
   font-weight: bold;
 }
 
 .profile-picture {
-  float:left;
+  float: left;
   margin-top: 20px;
   margin-left: 8px;
 }
 
 .logo {
-  padding-top: 20px;
-  float: right;
-  margin:0px;
+  padding-top: 2%;
+  margin-right: 2%;
+  height: 50px;
+  margin-bottom: 5px;
 }
 
-hr { display: block; height: 1px;
-  border: 0; border-top: thin solid #615246;
-  margin-bottom: .5em;  }
+.header-text {
+  display: flex;
+  font-weight: bolder;
+  font-size: 20pt;
+  align-content: flex-start;
+}
+
+.header {
+  width: 100%;
+  height: 10%;
+  border-bottom: 1px solid black;
+  margin-bottom: 10px;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+}
+
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: thin solid #615246;
+  margin-bottom: .5em;
+}
+
+.log-picture {
+  margin: 5%;
+}
+
+.log-summary {
+  width: 75%;
+  display: flex;
+
+}
 
 /* --------------------------------------------------------------------------------
 Container
