Updated test map

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -105,7 +105,10 @@ hr {
 }
 
 
-
+#map {
+  height: 500px;
+  width: 250px;
+}
 
 
 /* --------------------------------------------------------------------------------
