--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -8,7 +8,7 @@ body,
 body {
   font-family: 'Mali', cursive;
 
-  background-color: #C8BA89;
+  background-color: #ffff;
   justify-content: center;
 }
 
@@ -45,12 +45,17 @@ body {
 
 .wrapper {
   min-height: 100%;
-  margin-bottom: -50px;
+  margin-bottom: -75px;
 }
 
-.footer,
+.footer {
+  background-color: #C8BA89;
+  height: 75px;
+}
+
 .push {
-  height: 50px;
+  background-color: #C8BA89;
+  height: 75px;
 }
 
 .logout-icon {
@@ -86,6 +91,7 @@ h1 {
 }
 
 .header {
+  background-color: #C8BA89;
   width: 100%;
   height: 10%;
   border-bottom: 1px solid black;
