Consolidated add log

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -61,13 +61,20 @@ body {
 #map {
   height: 350px;
   width: 350px;
+  display: flex;
+  align-items: center;
 }
 
 h1 {
-
   font-family: 'Kalam', cursive;
   font-size: 40px;
   font-weight: bold;
+}
+
+.add-screen {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .profile-picture {
