--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,12 +3,13 @@ body,
 #react-root {
   height: 100%;
   margin: 0;
+  max-width: 100%;
 }
 
 body {
   font-family: 'Mali', cursive;
 
-  background-color: ;
+  background-color: #ffff;
   justify-content: center;
 }
 
@@ -25,11 +26,16 @@ body {
 
   .log-picture {
     margin: 5%;
+    padding: 3%;
+    border: 1.2px solid #5E743C;
+    text-align: center;
   }
 
   .log-summary {
     width: 100%;
     display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
   }
 }
 
@@ -39,7 +45,16 @@ body {
   }
 
   .log-picture {
-    margin: 5%;
+    margin-top: 3.5%;
+    margin-right: 2%;
+    margin-left: 2%;
+    border: 2%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-bottom: 1.2px solid #5E743C;
+    padding-top: 1%;
+    padding-bottom: 5%;
   }
 }
 
@@ -67,13 +82,8 @@ body {
   margin-top: .2%;
   align-content: space-evenly;
   margin-bottom: .2%;
-
 }
 
-.wrapper {
-  min-height: 100%;
-  margin-bottom: -50px;
-}
 
 .footer {
   height: 50px;
@@ -147,16 +157,6 @@ hr {
 }
 
 
-
-
-
-/* --------------------------------------------------------------------------------
-Container
--------------------------------------------------------------------------------- */
-
-.container {
-  padding: 20px;
-}
 
 /* --------------------------------------------------------------------------------
 Button
