--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -32,10 +32,11 @@ body {
   }
 
   .log-summary {
-    width: 100%;
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    align-items: center;
+    flex-direction: column;
+    min-height: 100%;
+    padding-bottom: 30%
   }
 
   .add-screen {
@@ -72,6 +73,15 @@ body {
     min-height: 100%;
     padding-bottom: 30%;
   }
+
+  .log-summary {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    min-height: 100%;
+    padding-bottom: 30%
+  }
+
 }
 
 .bottom-nav {
